# python

./: .gitignore  CHANGES.md  README.md  launch.json
RAG/: .gitignore  CHANGES.md  README.md  requirements.txt
chat-with-persistent-pdf/: .gitignore  pdf_rag_persistent.py  query_pdf.py  requirements.txt  write_pdf.py
colpali/: .gitignore  ColPali_+_Qwen2_VL.ipynb  README.md  colpali_class.py  colpali_persist.py  colpaly_persist.py  colplay.py  hf_sample.py  imac_requirements.txt  requirements.txt
cosmology/: .gitignore  3D_syphon.py  BLENDER_NOTES.md  blender_bigbang_sim.py  blender_universe_sim.py  expansion_simulation2.py  expansion_simulation3.py  expension_simulation.py  radial_time.py
cp_links/: README.md  cp_links.py
cuda_whisper/: PROJECT_CONTEXT.md  README.md  requirements.txt  start.bat  start.ps1
diffuser/: diffuser.py
docling_rag/: .gitignore  main.py  pymil.py  pyproject.toml  requirements.txt
docling_server/: .gitignore  CLAUDE.md  README.md  docling_server.py  local_api_server.py  local_client.py  local_docling_client.py  main.py  pyproject.toml  requirements.txt  start_local_server.sh
docling_server/content/.ssh/: authorized_keys
docling_translate/: .gitignore  README_TRANSLATION.md  example_usage.sh  main.py  pyproject.toml  requirements.txt  translate.sh  translate_markdown.py
epub2pdf/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  textepub2pdf.py
escape_velocity/: .gitignore  README.md  escape.py  requirements.txt
finance/finalyze/data_server/: .env.example  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test_cache.py
finance/finalyze/data_server/data_server/: config.py  main.py
finance/finalyze/data_server/data_server/api/: eodhd_proxy.py  routes.py  tracking.py
finance/finalyze/data_server/data_server/db/: cache.py  database.py  models.py
finance/finalyze/data_server/data_server/services/: eodhd_client.py  fred_client.py  sec_edgar.py  yfinance_client.py
finance/finalyze/data_server/data_server/utils/: exchange_hours.py
finance/finalyze/data_server/data_server/workers/: news_worker.py  price_worker.py  scheduler.py
finance/finalyze/data_server/data_server/ws/: handlers.py  manager.py
finance/finalyze/data_server/scripts/: start.sh
finance/finalyze/data_server/tailscale/: serve.json
finance/finalyze/data_server/traefik/: traefik.yml
finance/finalyze/investment_tool/: .gitignore  PROJECT_CONTEXT.md  main.py  mcp_server.py  pyproject.toml  requirements.txt
finance/finalyze/investment_tool/analysis/sentiment/: __init__.py  aggregator.py
finance/finalyze/investment_tool/config/: __init__.py  categories.py  settings.py
finance/finalyze/investment_tool/data/: __init__.py  cache.py  manager.py  models.py  storage.py
finance/finalyze/investment_tool/data/providers/: __init__.py  base.py  eodhd.py
finance/finalyze/investment_tool/resources/: default_categories.json
finance/finalyze/investment_tool/ui/: __init__.py  control_server.py  main_window.py
finance/finalyze/investment_tool/ui/dialogs/: __init__.py  add_stock_dialog.py  category_dialog.py  discrepancy_dialog.py  settings_dialog.py
finance/finalyze/investment_tool/ui/styles/: __init__.py  theme.py
finance/finalyze/investment_tool/ui/widgets/: __init__.py  advanced_chart.py  etf_overview.py  fundamentals_overview.py  fx_converter.py  market_treemap.py  news_feed.py  quarterly_financials.py  sentiment_gauge.py  stock_chart.py  watchlist.py
finance/finalyze/investment_tool/utils/: __init__.py  exchange_hours.py  helpers.py  logging.py  threading.py
finance/jupyter-m4/: .gitignore  Financial Data Statistics.ipnyb  main.py  pyproject.toml  section_1.ipynb  sp500full.ipynb
finance/jupyter-m4/Algorithmic Trading/: Regression-Based Strategy 0-1.ipynb  Trend Following Strategy SMA.ipynb
finance/jupyter-m4/Financial Basics/: Adjusted Close.ipynb  Alpha and Beta.ipynb  Understanding Financial Data.ipynb
finance/jupyter-m4/Portfolio Optimization and CAPM/: 2 Stock Portfolio.ipynb  Portfolio Optimization.ipynb
finance/jupyter-m4/Time Series Analysis/: ACF_PACF_Stock_Returns_v2.ipynb  ARIMA 3.ipynb  ARIMA.ipynb  ARIMA_2_v2.ipynb  EWMA and Holt-Winters.ipynb  PACF and ACF.ipynb  SMA.ipynb  Stationarity.ipynb
fpdf2/: create_pdf.py
gl_fonts/: test_font.py  test_font3.py
gramformer/: test-gramformer
image-generation/torch-diffusion/: gen-image.py  pyproject.toml  requirements.txt
image_classifier/: Image Classifier Project.html  Image Classifier Project.ipynb  predict.py  train.py  train_class.py
llm-ollama-pdf/: query.py  requirements.txt
local_mcp/: CLAUDE.md  README.md  agent.py  config.py  currency_server.py  demo.py  pyproject.toml  stock_server.py  test_config.py  test_mcp.py
md2pdf/: .gitignore  md2pdf.py  md2pdf.sh  pyproject.toml
mistral/: .gitignore  requirements.txt  test_mistral.py  test_mistral_mlx.py
mlx_whisper/: .gitignore  PROJECT_CONTEXT.md  README.md  manage_deleted.py  start.sh
ollama/: test-ollama.py
ollama_web_search/: .env  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  (+1 more)
pdf4llm/: setup.py
simple_rag_test/: .gitignore  main.py  pyproject.toml  requirements.txt
youtube-channel-id/: .gitignore  README.md  api_server.py  get_channel_id.py  get_playlist_videos.py  main.py  pyproject.toml  requirements.txt
(+137 files in other folders)
