[project]
name = "investment-tool"
version = "0.2.0"
description = "Investment Tracking & Analysis Tool"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "pyqtgraph>=0.13.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "squarify>=0.4.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.scripts]
investment-tool = "investment_tool.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["investment_tool"]
